chore: create a HOC to wrap components with ErrorBoundary

--- a/.gitignore
+++ b/.gitignore
@@ -230,6 +230,6 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
-# End of https://www.toptal.com/developers/gitignore/api/python
 
-frontend/.cursor/rules/
+# cursor files
+frontend/.cursor/
